kibana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "kibana-ingress"
  namespace: "monitoring"
  annotations:
    alb.ingress.kubernetes.io/group.name: "enro-kibana"
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":{
      "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-2-Ext-2018-06       
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:207273113483:certificate/f406eabb-d578-40d3-a0cb-92cef5fe3c5d
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS": 443}]'
    alb.ingress.kubernetes.io/success-codes: 200-499
  labels:
    app: kibana
spec:
  rules:
  - http:
      paths:
       - backend:
          serviceName: ssl-redirect
          servicePort: use-annotation
         path: /*
       - backend:
          serviceName: kibana
          servicePort: 80
         path: /*
